Mobile navbar more similar to video + must fix blur effect behind navbar

--- a/Webbutveckling-HTML-CSS/ESC-Hacker-Escape-Rooms/src/ham-menu.scss
+++ b/Webbutveckling-HTML-CSS/ESC-Hacker-Escape-Rooms/src/ham-menu.scss
@@ -34,7 +34,6 @@ body.active
         top: 4.5%;
         right: 5%;
         z-index: 0;
-        transition: 0.5s;
     }
 
     span:nth-child(2)
@@ -45,7 +44,6 @@ body.active
     span:nth-child(3)
     {
         top: 6%;
-        transition: 0.5s;
     }
 
     @include breakpoint($desktop)
@@ -59,25 +57,29 @@ body.active
     span
     {
         z-index: 1;
-        transition: z-index 0.1s;
-        transition-delay: 0.5s;
     }
 
     span:nth-child(1)
     {
         top: 4.5%;
         transform: rotate(45deg);
+        transition: transform 0;
+        transition-delay: 0.5s;
     }
 
     span:nth-child(2)
     {
         opacity: 0;
+        transition: opacity 0;
+        transition-delay: 0.5s;
     }
 
     span:nth-child(3)
     {
         top: 4.5%;
         transform: rotate(-45deg);
+        transition: transform 0;
+        transition-delay: 0.5s;
     }
 }
 
@@ -97,7 +99,6 @@ header
         left: 2.5%;
         top: 2.5%;
         z-index: -1;
-        transition: 0.5s;
 
         ul
         {
